--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,23 @@
 {
   "extends": ["stylelint-config-recommended-scss"],
   "plugins": ["stylelint-scss", "stylelint-csstree-validator"],
-  "rules": {},
+  "rules": {
+    "no-descending-specificity": null,
+    "at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
+      }
+    ],
+    "scss/at-rule-no-unknown":  [
+      false,
+      {
+        "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
+      }
+    ],
+    "csstree/validator": true,
+    "scss/selector-no-redundant-nesting-selector": false
+  },
   "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css", "**/*.js", "**/*.jsx"],
   "editor.codeActionsOnSave": {
     "source.fixAll": true
