--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -15,8 +15,8 @@
         "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
       }
     ],
-    "csstree/validator": false,
-    "scss/selector-no-redundant-nesting-selector": false
+    "csstree/validator": true,
+    "scss/selector-no-redundant-nesting-selector": true
   },
   "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css", "**/*.js", "**/*.jsx"],
   "editor.codeActionsOnSave": {
